[package]
name = "alcova"
version = "0.1.0"
authors = ["Connor Brewster <cbrewster@hey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-web-actors = "2.0.0"
actix-web = "2.0.0"
alcova_macros = { path = "../alcova_macros" }
futures = "0.3.5"
jsonwebtoken = "7"
log = "0.4.8"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

