[package]
name = "liveview"
version = "0.1.0"
authors = ["Connor Brewster <connor.brewster@eagles.oc.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-web-actors = "2.0.0"
actix-web = "2.0.0"
futures = "0.3.5"
log = "0.4.8"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

